# spikeutil

./: .gitignore  pyproject.toml
src/spikeutil/: analysis.py  burst.py  connectivity.py  core.py  features.py  geom.py  latent_dynamics.py  math.py  viz.py
